hide prev and next arrows on mobile, add swipe, resize image to 99% to avoid overlap

--- a/_assets/stylesheets/components/carousel.scss
+++ b/_assets/stylesheets/components/carousel.scss
@@ -4,6 +4,15 @@
 
 
 
+//small screen sizes
+// 812 coresponds to iphone-x
+@media only screen and  (max-width: 812px) {
+  .jcarousel-control-prev, .jcarousel-control-next {
+    display:none !important;
+  }
+
+}
+
 
 
 
